// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Custom options definitions for Service, RPC and request/response fields.
// These services are used to define the EZ Isolate SDK
// https://protobuf.dev/programming-guides/proto2/#customoptions

syntax = "proto3";

package enforcer.v1;

import "enforcer/v1/ez_data_scope.proto";
import "google/protobuf/descriptor.proto";

// Specifies import path for the generated Go code used to auto-generate SDK
// code from proto annotations.
option go_package = "github.com/private-compute-infra-toolkit/ez/sdk/v1";

extend google.protobuf.ServiceOptions {
  EzServiceAnnotation ez_svc_annotation = 39000;
}

extend google.protobuf.MethodOptions {
  EzFunctionAnnotation ez_rpc_annotation = 39001;
}

extend google.protobuf.FieldOptions {
  EzFieldAnnotation ez_field_annotation = 39002;
}

extend google.protobuf.MessageOptions {
  EzMessageAnnotation ez_msg_annotation = 39003;
}

enum EzServiceTransport {
  EZ_SERVICE_TRANSPORT_UNSPECIFIED = 0;
  EZ_SERVICE_TRANSPORT_GRPC = 1;
  EZ_SERVICE_TRANSPORT_STUBBY = 2;
  // EZ_SERVICE_TRANSPORT_ENFORCER_PROXY = 3;
}

// Annotation for defining service-level metadata
message EzServiceAnnotation {
  string name = 1;
  EzServiceTransport ingress_rpc_transport = 2;
}

// Annotation for defining rpc-level metadata, including the EzDataScope for
// each rpc
message EzFunctionAnnotation {
  string name = 1;
  EzDataScope data_scope = 2;
}

// Annotation for defining field-level metadata
message EzFieldAnnotation {}

// Annotation for defining message-level metadata
message EzMessageAnnotation {
  string name = 1;
}
